rust/magpie-tts-rt-sys/src/bindings.rs

/* automatically generated by rust-bindgen 0.72.1 */

#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct mtt_runtime {
    _unused: [u8; 0],
}
pub type mtt_runtime_t = mtt_runtime;
#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct mtt_model {
    _unused: [u8; 0],
}
pub type mtt_model_t = mtt_model;
#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct mtt_session {
    _unused: [u8; 0],
}
pub type mtt_session_t = mtt_session;
#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct mtt_request {
    _unused: [u8; 0],
}
pub type mtt_request_t = mtt_request;
pub type mtt_status_t = i32;
pub type mtt_error_stage_t = i32;
pub type mtt_request_state_t = i32;
pub type mtt_pcm_format_t = i32;
#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct mtt_error_v1 {
    pub struct_size: u32,
    pub abi_version: u32,
    pub code: mtt_status_t,
    pub stage: mtt_error_stage_t,
    pub message: [core::ffi::c_char; 512usize],
}
pub type mtt_error_v1_t = mtt_error_v1;
#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct mtt_runtime_desc_v1 {
    pub struct_size: u32,
    pub abi_version: u32,
    pub cuda_device_index: i32,
    pub flags: u32,
    pub reserved: [u64; 4usize],
}
pub type mtt_runtime_desc_v1_t = mtt_runtime_desc_v1;
#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct mtt_model_desc_v1 {
    pub struct_size: u32,
    pub abi_version: u32,
    pub bundle_path: *const core::ffi::c_char,
    pub bundle_path_length: u64,
    pub expected_manifest_sha256: [u8; 32usize],
    pub flags: u32,
    pub reserved_0: u32,
    pub reserved: [u64; 4usize],
}
pub type mtt_model_desc_v1_t = mtt_model_desc_v1;
#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct mtt_model_info_v1 {
    pub struct_size: u32,
    pub abi_version: u32,
    pub tokenizer_vocabulary_size: u32,
    pub text_embedding_rows: u32,
    pub bos_token_id: u32,
    pub eos_token_id: u32,
    pub japanese_global_pad_token_id: u32,
    pub maximum_text_tokens: u32,
    pub maximum_audio_frames: u32,
    pub sample_rate_hz: u32,
    pub channels: u32,
    pub pcm_format: mtt_pcm_format_t,
    pub codec_frame_samples: u32,
    pub initial_frames: u32,
    pub steady_frames: u32,
    pub tail_min_frames: u32,
    pub tail_max_frames: u32,
    pub tokenizer_identity_sha256: [u8; 32usize],
    pub reserved_0: u32,
    pub reserved: [u64; 4usize],
}
pub type mtt_model_info_v1_t = mtt_model_info_v1;
#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct mtt_session_desc_v1 {
    pub struct_size: u32,
    pub abi_version: u32,
    pub flags: u32,
    pub reserved_0: u32,
    pub reserved: [u64; 4usize],
}
pub type mtt_session_desc_v1_t = mtt_session_desc_v1;
#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct mtt_request_desc_v1 {
    pub struct_size: u32,
    pub abi_version: u32,
    pub text_token_ids: *const i64,
    pub text_token_count: u64,
    pub random_seed: u64,
    pub flags: u32,
    pub reserved_0: u32,
    pub reserved: [u64; 4usize],
}
pub type mtt_request_desc_v1_t = mtt_request_desc_v1;
#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct mtt_request_snapshot_v1 {
    pub struct_size: u32,
    pub abi_version: u32,
    pub revision: u64,
    pub state: mtt_request_state_t,
    pub available_audio_leases: u32,
    pub generated_codec_frames: u64,
    pub published_samples: u64,
    pub committed_text_tokens: u64,
    pub terminal_status: mtt_status_t,
    pub terminal_error_stage: mtt_error_stage_t,
    pub terminal_error_message: [core::ffi::c_char; 512usize],
    pub reserved: [u64; 4usize],
}
pub type mtt_request_snapshot_v1_t = mtt_request_snapshot_v1;
#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct mtt_alignment_event_v1 {
    pub struct_size: u32,
    pub abi_version: u32,
    pub sample_index: u64,
    pub committed_text_tokens: u64,
    pub reserved: [u64; 2usize],
}
pub type mtt_alignment_event_v1_t = mtt_alignment_event_v1;
#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct mtt_audio_lease_v1 {
    pub struct_size: u32,
    pub abi_version: u32,
    pub lease_id: u64,
    pub samples: *const f32,
    pub sample_count: u64,
    pub first_sample_index: u64,
    pub sequence: u64,
    pub sample_rate_hz: u32,
    pub channels: u32,
    pub format: mtt_pcm_format_t,
    pub flags: u32,
    pub committed_text_tokens: u64,
    pub alignment_events: *const mtt_alignment_event_v1_t,
    pub alignment_event_count: u64,
    pub reserved: [u64; 2usize],
}
pub type mtt_audio_lease_v1_t = mtt_audio_lease_v1;
#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct mtt_api_v1 {
    pub struct_size: u32,
    pub abi_version: u32,
    pub runtime_create: ::core::option::Option<
        unsafe extern "C" fn(
            desc: *const mtt_runtime_desc_v1_t,
            runtime: *mut *mut mtt_runtime_t,
            error: *mut mtt_error_v1_t,
        ) -> mtt_status_t,
    >,
    pub runtime_destroy: ::core::option::Option<
        unsafe extern "C" fn(
            runtime: *mut mtt_runtime_t,
            error: *mut mtt_error_v1_t,
        ) -> mtt_status_t,
    >,
    pub model_load: ::core::option::Option<
        unsafe extern "C" fn(
            runtime: *mut mtt_runtime_t,
            desc: *const mtt_model_desc_v1_t,
            model: *mut *mut mtt_model_t,
            error: *mut mtt_error_v1_t,
        ) -> mtt_status_t,
    >,
    pub model_destroy: ::core::option::Option<
        unsafe extern "C" fn(model: *mut mtt_model_t, error: *mut mtt_error_v1_t) -> mtt_status_t,
    >,
    pub model_get_info: ::core::option::Option<
        unsafe extern "C" fn(
            model: *mut mtt_model_t,
            info: *mut mtt_model_info_v1_t,
            error: *mut mtt_error_v1_t,
        ) -> mtt_status_t,
    >,
    pub session_create: ::core::option::Option<
        unsafe extern "C" fn(
            model: *mut mtt_model_t,
            desc: *const mtt_session_desc_v1_t,
            session: *mut *mut mtt_session_t,
            error: *mut mtt_error_v1_t,
        ) -> mtt_status_t,
    >,
    pub session_destroy: ::core::option::Option<
        unsafe extern "C" fn(
            session: *mut mtt_session_t,
            error: *mut mtt_error_v1_t,
        ) -> mtt_status_t,
    >,
    pub request_start: ::core::option::Option<
        unsafe extern "C" fn(
            session: *mut mtt_session_t,
            desc: *const mtt_request_desc_v1_t,
            request: *mut *mut mtt_request_t,
            error: *mut mtt_error_v1_t,
        ) -> mtt_status_t,
    >,
    pub request_poll: ::core::option::Option<
        unsafe extern "C" fn(
            request: *mut mtt_request_t,
            snapshot: *mut mtt_request_snapshot_v1_t,
            error: *mut mtt_error_v1_t,
        ) -> mtt_status_t,
    >,
    pub request_wait: ::core::option::Option<
        unsafe extern "C" fn(
            request: *mut mtt_request_t,
            after_revision: u64,
            timeout_nanoseconds: u64,
            snapshot: *mut mtt_request_snapshot_v1_t,
            error: *mut mtt_error_v1_t,
        ) -> mtt_status_t,
    >,
    pub request_cancel: ::core::option::Option<
        unsafe extern "C" fn(
            request: *mut mtt_request_t,
            error: *mut mtt_error_v1_t,
        ) -> mtt_status_t,
    >,
    pub request_destroy: ::core::option::Option<
        unsafe extern "C" fn(
            request: *mut mtt_request_t,
            error: *mut mtt_error_v1_t,
        ) -> mtt_status_t,
    >,
    pub audio_acquire: ::core::option::Option<
        unsafe extern "C" fn(
            request: *mut mtt_request_t,
            lease: *mut mtt_audio_lease_v1_t,
            error: *mut mtt_error_v1_t,
        ) -> mtt_status_t,
    >,
    pub audio_release: ::core::option::Option<
        unsafe extern "C" fn(
            request: *mut mtt_request_t,
            lease_id: u64,
            error: *mut mtt_error_v1_t,
        ) -> mtt_status_t,
    >,
}
pub type mtt_api_v1_t = mtt_api_v1;
unsafe extern "C" {
    pub fn mtt_get_api(requested_abi_version: u32, api: *mut mtt_api_v1_t) -> mtt_status_t;
}
